<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemTask"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:layout_margin="8dp">

    <!-- Fila superior: Título y botón eliminar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Título de la tarea -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_titulo_de_tarea"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="InvalidId" />

        <!-- Botón Eliminar -->
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminar"
            android:backgroundTint="#FF0000"
            android:textColor="@android:color/white"
            android:padding="8dp" />

    </LinearLayout>
    <!-- Fila superior: Título y botón eliminar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Estado -->
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#808080"
            android:padding="8dp"
            android:text="@string/tv_pendiente"
            android:textColor="#000000"
            android:textSize="12sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!-- Botón Eliminar -->
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="#00C853"
            android:padding="8dp"
            android:text="@string/btn_editar"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <!-- Descripción -->
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descripcion_de_la_tarea"
        android:textSize="14sp"
        android:layout_marginTop="8dp" />

    <!-- Fecha -->
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_date"
        android:textSize="12sp"
        android:textColor="#666666"
        android:layout_marginTop="8dp" />

</LinearLayout>