<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/taskForm"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Título de la tarea -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_titulo"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Descripción de la tarea -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_descripcion"
                android:minLines="3"
                android:gravity="top" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Checkbo -->
        <CheckBox
            android:id="@+id/cbIsCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkB_completado"
            android:layout_marginBottom="24dp" />

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:backgroundTint="#FF9800"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>